--- a/DAMH 2/Debug/makefile
+++ b/DAMH 2/Debug/makefile
@@ -65,7 +65,7 @@ main-build: DAMH\ 2.elf secondary-outputs
 
 # Tool invocations
 DAMH\ 2.elf DAMH\ 2.map: $(OBJS) $(USER_OBJS) C:\Users\vutie\Desktop\KY\ 2\DAMH\DAMH\ 2\STM32F407VETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "DAMH 2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\vutie\Desktop\KY 2\DAMH\DAMH 2\STM32F407VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DAMH 2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "DAMH 2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\vutie\Desktop\KY 2\DAMH\DAMH 2\STM32F407VETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DAMH 2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
